Fill-Tune lang+Title

--- a/homepage_footer/index.html
+++ b/homepage_footer/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="zh-Hant">
+<html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>顧客回饋</title>
+  <title>顧客回饋-UNA</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
